Add a about me section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/style.production.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>Home</title>
 </head>
@@ -21,7 +21,10 @@
             <nav class="page-header__item">
                 <ul role="menubar" class="navigation-list">
                     <li role="presentation">
-                        <a href="#about" role="menuitem" class="navigation-list__item">About me</a>
+                        <a href="#home" role="menuitem" class="navigation-list__item">Home</a>
+                    </li>
+                    <li role="presentation">
+                        <a href="#about" role="menuitem" class="navigation-list__item">About</a>
                     </li>
                     <li role="presentation">
                         <a href="#work" role="menuitem" class="navigation-list__item">Work</a>
@@ -35,7 +38,7 @@
     </div>
     <div id="top" ></div>
     <!-- Main content -->
-    <section id="about">
+    <section id="home">
         <div class="profile">
             <img src="img/isabel-matula.png" 
             data-aos="fade-right" 
@@ -68,6 +71,69 @@
                 </p>
                 <a href="files/Matula_Isabel_Resume.pdf" target="_blank" download>Download my resume.</a>
                 <a href="#contact" class="button">Get in Touch</a>
+            </div>
+        </div>
+    </section>
+    <!-- About me -->
+    <section id="about">
+        <!-- Toolbelt -->
+        <div class="toolbelt">
+            <h1>Toolbelt</h1>
+            <div class="toolbelt__logos">
+                <img src="img/tool-logos/Angular.svg" alt="Angular logo">
+                <img src="img/tool-logos/Bootstrap.svg" alt="Bootstrap logo">
+                <img src="img/tool-logos/CSS3.svg" alt="CSS3 logo">
+                <img src="img/tool-logos/Firebase.svg" alt="Firebase logo">
+                <img src="img/tool-logos/GitHub.svg" alt="GitHub logo">
+                <img src="img/tool-logos/HTML5.svg" alt="HTML5 logo">
+                <img src="img/tool-logos/Javascript.svg" alt="Javascript logo">
+                <img src="img/tool-logos/MongoDB.svg" alt="MongoDB logo">
+                <img src="img/tool-logos/Node_js.svg" alt="Node.js logo">
+                <img src="img/tool-logos/Python.svg" alt="Python logo">
+                <img src="img/tool-logos/React.svg" alt="React logo">
+                <img src="img/tool-logos/Sql.svg" alt="SQL logo">
+                <img src="img/tool-logos/Visual_Studio.svg" alt="Visual Studio logo">
+            </div>
+            <div class="toolbelt__logos">
+                <img src="img/tool-logos/Angular.svg" alt="Angular logo">
+                <img src="img/tool-logos/Bootstrap.svg" alt="Bootstrap logo">
+                <img src="img/tool-logos/CSS3.svg" alt="CSS3 logo">
+                <img src="img/tool-logos/Firebase.svg" alt="Firebase logo">
+                <img src="img/tool-logos/GitHub.svg" alt="GitHub logo">
+                <img src="img/tool-logos/HTML5.svg" alt="HTML5 logo">
+                <img src="img/tool-logos/Javascript.svg" alt="Javascript logo">
+                <img src="img/tool-logos/MongoDB.svg" alt="MongoDB logo">
+                <img src="img/tool-logos/Node_js.svg" alt="Node.js logo">
+                <img src="img/tool-logos/Python.svg" alt="Python logo">
+                <img src="img/tool-logos/React.svg" alt="React logo">
+                <img src="img/tool-logos/Sql.svg" alt="SQL logo">
+                <img src="img/tool-logos/Visual_Studio.svg" alt="Visual Studio logo">
+            </div>
+        </div>
+        <div class="about">
+            <h1>About me</h1>
+            <div class="about__item">
+                <h2>Background</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, nihil vero veniam velit distinctio 
+                    architecto qui id iste facilis laboriosam quam labore quibusdam incidunt vitae exercitationem similique 
+                    quos ex eveniet.
+                </p>
+            </div>
+            <div class="about__item">
+                <h2>Why I want to be a Web Developer?</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio nisi ad labore! Perferendis quisquam 
+                    pariatur quia impedit odio eum ducimus accusantium, repudiandae aspernatur voluptatem nihil quos amet 
+                    voluptates aperiam ipsum.
+                </p>
+            </div>
+            <div class="about__item">
+                <h2>What am I looking for?</h2>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla repellat vel maxime perferendis sit recusandae, 
+                    rem voluptatum labore aliquid ut nemo consectetur error, eum provident harum. Praesentium eum voluptas consequatur.
+                </p>
             </div>
         </div>
     </section>
@@ -393,40 +459,6 @@
                     </div>
                 </dialog>
              </div>
-        </div>
-        <!-- Toolbelt -->
-        <div class="toolbelt">
-            <h1>Toolbelt</h1>
-            <div class="toolbelt__logos">
-                <img src="img/tool-logos/Angular.svg" alt="Angular logo">
-                <img src="img/tool-logos/Bootstrap.svg" alt="Bootstrap logo">
-                <img src="img/tool-logos/CSS3.svg" alt="CSS3 logo">
-                <img src="img/tool-logos/Firebase.svg" alt="Firebase logo">
-                <img src="img/tool-logos/GitHub.svg" alt="GitHub logo">
-                <img src="img/tool-logos/HTML5.svg" alt="HTML5 logo">
-                <img src="img/tool-logos/Javascript.svg" alt="Javascript logo">
-                <img src="img/tool-logos/MongoDB.svg" alt="MongoDB logo">
-                <img src="img/tool-logos/Node_js.svg" alt="Node.js logo">
-                <img src="img/tool-logos/Python.svg" alt="Python logo">
-                <img src="img/tool-logos/React.svg" alt="React logo">
-                <img src="img/tool-logos/Sql.svg" alt="SQL logo">
-                <img src="img/tool-logos/Visual_Studio.svg" alt="Visual Studio logo">
-            </div>
-            <div class="toolbelt__logos">
-                <img src="img/tool-logos/Angular.svg" alt="Angular logo">
-                <img src="img/tool-logos/Bootstrap.svg" alt="Bootstrap logo">
-                <img src="img/tool-logos/CSS3.svg" alt="CSS3 logo">
-                <img src="img/tool-logos/Firebase.svg" alt="Firebase logo">
-                <img src="img/tool-logos/GitHub.svg" alt="GitHub logo">
-                <img src="img/tool-logos/HTML5.svg" alt="HTML5 logo">
-                <img src="img/tool-logos/Javascript.svg" alt="Javascript logo">
-                <img src="img/tool-logos/MongoDB.svg" alt="MongoDB logo">
-                <img src="img/tool-logos/Node_js.svg" alt="Node.js logo">
-                <img src="img/tool-logos/Python.svg" alt="Python logo">
-                <img src="img/tool-logos/React.svg" alt="React logo">
-                <img src="img/tool-logos/Sql.svg" alt="SQL logo">
-                <img src="img/tool-logos/Visual_Studio.svg" alt="Visual Studio logo">
-            </div>
         </div>
     </section>
     <!-- Contact Information -->
