--- a/index.html
+++ b/index.html
@@ -55,22 +55,20 @@
             data-aos-easing="ease-in-out"  
             data-aos-once="true"
             class="profile__text">
-                <h1>Full-Stack Web Developer</h1>
+                <h2>Welcome! I'm ...</h2>
+                <h1>Isabel Matula<br> Full-Stack Web Developer</h1>
                 <p>
-                    Hello! My name is Isabel Matula and I’m a certified Full-Stack Developer with an educational background in business administration. 
-                    I discovered my passion for coding during my Bachelor at the Free University of Berlin. 
-                    Throughout foundational modules and career preparation courses, 
+                    Certified <strong>Full-Stack Developer</strong> with an educational background in business 
+                    administration. I discovered my passion for coding during my Bachelor at the Free University of Berlin, where 
                     I gained initial experiences with programming languages such as <strong>Python</strong>, <strong>R</strong>, 
-                    <strong>PHP</strong>, and <strong>SQL</strong>. 
-                    My professional journey includes an internship as an HR Generalist, 
-                    organizing events, managing schedules, and supporting a team of 30 employees. 
-                    Prior to this, I provided tailored German tutoring while attending the Chinese Learning Program in Taipei. 
+                    <strong>PHP</strong>, and <strong>SQL</strong>.<br>
                     To make my coding passion my profession, I completed Career Foundry's Full-Stack Web Developer program, 
                     learning <strong>JavaScript</strong>, <strong>React</strong>, <strong>NoSQL</strong> and more. 
-                    Now, I'm on the lookout for a role that values continuous growth. 
+                    Now, I'm on the lookout for a role that values continuous growth.<br><br>
+                    <a href="files/Matula_Isabel_Resume.pdf" target="_blank" download>Download my resume.</a>
                 </p>
-                <a href="files/Matula_Isabel_Resume.pdf" target="_blank" download>Download my resume.</a>
                 <a href="#contact" class="button">Get in Touch</a>
+                <a href="#work" class="button">See my Work</a>
             </div>
         </div>
     </section>
@@ -113,27 +111,94 @@
         <div class="about">
             <h1>About me</h1>
             <div class="about__item">
-                <h2>Background</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, nihil vero veniam velit distinctio 
-                    architecto qui id iste facilis laboriosam quam labore quibusdam incidunt vitae exercitationem similique 
-                    quos ex eveniet.
-                </p>
+                <h2>Educational and Professional Background</h2>
+                <div class="about__item-content">
+                    <img 
+                    src="img/taipei.jpg" 
+                    alt="Linsen North Road - Taipei"
+                    data-aos="fade-right" 
+                    data-aos-delay="30"
+                    data-aos-duration="1200"
+                    data-aos-easing="ease-in-out" 
+                    >
+                    <p
+                    data-aos="fade-left" 
+                    data-aos-delay="30"
+                    data-aos-duration="1200"
+                    data-aos-easing="ease-in-out" 
+                    >
+                        After high school, I studied Languages and Cultures of Southeast Asia at the University of Hamburg for 
+                        one year. Then, in 2017, I followed my heart to Taipei, where I immersed myself in the language through 
+                        the Regular Chinese Language Program at Tamkang University. In 2020, I returned to Germany to pursue a 
+                        B.Sc. in Business Administration at the Free University of Berlin, graduating in 2023. Across this path, 
+                        I stumbled upon my love for coding, leading me to enroll in CareerFoundry's Full Stack Web 
+                        Development program in August 2023.<br>
+                        In my professional journey, I had the opportunity to embark on an internship as an HR Generalist, 
+                        where I organized the summer festival, created work schedules, and supported around 30 employees daily. 
+                        Prior to that, I had the pleasure of tutoring three students in German while living in Taipei. 
+                        I tailored personalized lesson plans to meet their individual needs, encouraging continuous improvement 
+                        in their language skills.
+                    </p>
+                </div>
             </div>
             <div class="about__item">
                 <h2>Why I want to be a Web Developer?</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio nisi ad labore! Perferendis quisquam 
-                    pariatur quia impedit odio eum ducimus accusantium, repudiandae aspernatur voluptatem nihil quos amet 
-                    voluptates aperiam ipsum.
-                </p>
+                <div class="about__item-content">
+                    <p
+                    data-aos="fade-right" 
+                    data-aos-delay="30"
+                    data-aos-duration="1200"
+                    data-aos-easing="ease-in-out" 
+                    >
+                        I discovered my passion for coding during my Bachelor at the Free University of Berlin. 
+                        Throughout foundational modules and career preparation courses, I gained initial experiences with 
+                        programming languages such as Python, R, PHP, and SQL. To transition my coding passion into a profession, 
+                        I enrolled in Career Foundry's Full-Stack Web Developer program.<br>
+                        But my fascination with languages didn't start there. From studying Russian in school to self-learning 
+                        the Korean alphabet and delving into Chinese during my time in Taiwan. Languages are not just a means 
+                        of communication; they are also powerful tools for problem-solving. It's this perspective that 
+                        draws me to programming languages. They, too, serve as tools, for visualizing ideas, making 
+                        information more accessible, and ultimately, enhancing the quality of human life. 
+                        This belief inspired me to turn my coding passion into a career.
+                    </p>
+                    <img 
+                    src="img/code.jpg" 
+                    alt="Laptop"
+                    data-aos="fade-left" 
+                    data-aos-delay="30"
+                    data-aos-duration="1200"
+                    data-aos-easing="ease-in-out"
+                    >
+                </div>
             </div>
             <div class="about__item">
                 <h2>What am I looking for?</h2>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla repellat vel maxime perferendis sit recusandae, 
-                    rem voluptatum labore aliquid ut nemo consectetur error, eum provident harum. Praesentium eum voluptas consequatur.
-                </p>
+                <div class="about__item-content">
+                    <img 
+                    src="img/code_team.jpg" 
+                    alt="Table serveral laptops"
+                    data-aos="fade-right" 
+                    data-aos-delay="30"
+                    data-aos-duration="1200"
+                    data-aos-easing="ease-in-out"
+                    >
+                    <p
+                    data-aos="fade-left" 
+                    data-aos-delay="30"
+                    data-aos-duration="1200"
+                    data-aos-easing="ease-in-out"
+                    >
+                        I'm a web developer with an interest in continuous learning, always seeking to enhance my skills
+                        and explore new programming languages, frameworks, libraries, and emerging technologies. I'm eager
+                        to join a team where I can learn and grow while working on diverse projects.
+                        What truly motivates me is the opportunity to work on projects that make a positive impact on people.<br>
+                        I am currently living in my hometown, Rostock, which is why I am interested in finding
+                        opportunities either locally or in remote positions. Whether it's working directly from
+                        Rostock or collaborating from a distance, I am fully committed to making a valuable contribution
+                        to any team I join.
+                        Let's connect and explore how we can create something meaningful together!
+                    </p>
+                </div>
             </div>
         </div>
     </section>
@@ -154,6 +219,8 @@
                     React Client-side for an application called myMovie based on its
                     existing server-side code (REST API and database).
                     User can create an user profile and save their favorite movies.
+                    This project was build using <strong>React</strong>, <strong>SCSS</strong>, 
+                    <strong>JavaScript</strong>, and more. 
                 </p>
                 <a href="https://github.com/IsabelWen/movie_api-client" target="_blank" class="button">Code</a>
                 <a href="https://mymovie-api.netlify.app/login" target="_blank" class="button">Demo</a>
@@ -207,7 +274,9 @@
                 <a href="https://isabelwen.github.io/meet/" target="_blank"><img src="img/meet_app_project_full.png"></a>
                 <p>
                     A serverless, progressive web application (PWA) using a test-driven development (TDD) technique. 
-                    The Meet App uses the Google Calendar API to fetch upcoming events.
+                    The Meet App uses the <strong>Google Calendar API </strong> to fetch upcoming events.
+                    This project was build using <strong>React</strong>, <strong>Recharts</strong>, 
+                    <strong>JavaScript</strong>, and more. 
                 </p>
                 <a href="https://github.com/IsabelWen/meet" target="_blank" class="button">Code</a>
                 <a href="https://isabelwen.github.io/meet/" target="_blank" class="button">Demo</a>
@@ -266,6 +335,8 @@
                     Angular Client-side for an application called myMovie based on its
                     existing server-side code (REST API and database).
                     User can create an user profile and save their favorite movies.
+                    This project was build using <strong>Angular</strong>, <strong>TypeScript</strong>, 
+                    <strong>SCSS</strong>, and more. 
                 </p>
                 <a href="https://github.com/IsabelWen/myMovie-Angular-client" target="_blank" class="button">Code</a>
                 <a href="https://isabelwen.github.io/myMovie-Angular-app/welcome" target="_blank" class="button">Demo</a>
@@ -320,6 +391,8 @@
                 <p>
                     This API provide users with access to information about different movies, directors, and genres. 
                     Users are able to sign up, update their personal information, and create a list of their favorite movies.
+                    This project was build using <strong>MongoDB</strong>, <strong>Node.js</strong>, 
+                    <strong>Express</strong>, and more. 
                 </p>
                 <a href="https://github.com/IsabelWen/movie_api" target="_blank" class="button">Code</a>
                 <dialog class="modal">
@@ -371,7 +444,10 @@
                 <h2>Chat App<a class="open-modal"><img src="img/plus-icon.svg"></a></h2>
                 <a href="https://github.com/IsabelWen/chat" target="_blank"><img src="img/chat-app_full.png"></a>
                 <p>
-                    A chat app for mobile devices using React Native. The app provides users with a chat interface and options to share images, audios and location.
+                    A chat app for mobile devices using React Native. The app provides users with a chat interface and 
+                    options to share images, audios and location.
+                    This project was build using <strong>React Native</strong>, <strong>Firebase</strong>, 
+                    <strong>GiftedChat</strong>, and more. 
                 </p>
                 <a href="https://github.com/IsabelWen/chat" target="_blank" class="button">Code</a>
                 <a href="files/Case Study – Chat App.pdf" target="_blank" class="button">Case</a>
@@ -425,6 +501,8 @@
                 <p>
                     A small web application with HTML, CSS, and JavaScript that loads data about pokemons from an external API 
                     and enables the viewing of data points in detail.
+                    This project was build using <strong>JavaScript</strong>, <strong>HTML</strong>, 
+                    <strong>Bootstrap</strong>, and more. 
                 </p>
                 <a href="https://github.com/IsabelWen/simple-js-app" target="_blank" class="button">Code</a>
                 <a href="https://isabelwen.github.io/simple-js-app/" target="_blank" class="button">Demo</a>
