Fix img display in about sections for smaller screens

--- a/index.html
+++ b/index.html
@@ -142,8 +142,17 @@
                 </div>
             </div>
             <div class="about__item">
-                <h2>Why I want to be a Web Developer?</h2>
+                <h2>Why I want to be a Web Developer</h2>
                 <div class="about__item-content">
+                    <img 
+                    src="img/code.jpg" 
+                    alt="Laptop"
+                    data-aos="fade-left" 
+                    data-aos-delay="30"
+                    data-aos-duration="1200"
+                    data-aos-easing="ease-in-out"
+                    id="first"
+                    >
                     <p
                     data-aos="fade-right" 
                     data-aos-delay="30"
@@ -168,11 +177,12 @@
                     data-aos-delay="30"
                     data-aos-duration="1200"
                     data-aos-easing="ease-in-out"
+                    id="second"
                     >
                 </div>
             </div>
             <div class="about__item">
-                <h2>What am I looking for?</h2>
+                <h2>What am I looking for</h2>
                 <div class="about__item-content">
                     <img 
                     src="img/code_team.jpg" 
@@ -213,7 +223,7 @@
             data-aos-duration="1000"
             data-aos-easing="ease-in-out" 
             class="project-list__item">
-                <h2>React Movie App<a class="open-modal"><img src="img/plus-icon.svg"></a></h2>
+                <h2>React myMovie<a class="open-modal"><img src="img/plus-icon.svg"></a></h2>
                 <a href="https://mymovie-api.netlify.app/login" target="_blank"><img src="img/react_movie_app_project_full.png"></a>
                 <p>
                     React Client-side for an application called myMovie based on its
@@ -225,7 +235,7 @@
                 <a href="https://github.com/IsabelWen/movie_api-client" target="_blank" class="button">Code</a>
                 <a href="https://mymovie-api.netlify.app/login" target="_blank" class="button">Demo</a>
                 <dialog class="modal">
-                    <h2>React Movie App<a class="close-modal"><img src="img/cross-icon.svg" alt="close modal icon"></a></h2>
+                    <h2>React myMovie<a class="close-modal"><img src="img/cross-icon.svg" alt="close modal icon"></a></h2>
                     <p>
                         React Client-side for an application called myMovie based on its
                         existing server-side code (REST API and database).
@@ -329,7 +339,7 @@
              data-aos-duration="1000"
              data-aos-easing="ease-in-out" 
              class="project-list__item">
-                <h2>Angular Movie App<a class="open-modal"><img src="img/plus-icon.svg"></a></h2>
+                <h2>Angular myMovie<a class="open-modal"><img src="img/plus-icon.svg"></a></h2>
                 <a href="https://isabelwen.github.io/myMovie-Angular-app/welcome" target="_blank"><img src="img/angular_movie_app_project_full.png"></a>
                 <p>
                     Angular Client-side for an application called myMovie based on its
@@ -341,7 +351,7 @@
                 <a href="https://github.com/IsabelWen/myMovie-Angular-client" target="_blank" class="button">Code</a>
                 <a href="https://isabelwen.github.io/myMovie-Angular-app/welcome" target="_blank" class="button">Demo</a>
                 <dialog class="modal">
-                    <h2>Angular Movie App<a class="close-modal"><img src="img/cross-icon.svg" alt="close modal icon"></a></h2>
+                    <h2>Angular myMovie<a class="close-modal"><img src="img/cross-icon.svg" alt="close modal icon"></a></h2>
                     <p>
                         Angular Client-side for an application called myMovie based on its
                         existing server-side code (REST API and database).
@@ -548,6 +558,9 @@
         <div class="contact">
             <div class="contact__information">
                 <h1>Contact Me</h1>
+                <h3>I'm based in Rostock and open to remote roles.<br>
+                    Feel free to connect with me via Email or on LinkedIn!
+                </h3>
                 Isabel Matula<br>
                 Rostock - Germany<br>
                 <br>
