Change css home for smaller screens

--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
             data-aos-once="true"
             class="profile__text">
                 <h2>Welcome! I'm ...</h2>
-                <h1>Isabel Matula<br> Full-Stack Web Developer</h1>
+                <h1>Isabel Matula<br>Full-Stack Developer</h1>
                 <p>
-                    Certified <strong>Full-Stack Developer</strong> with an educational background in business 
-                    administration. I discovered my passion for coding during my Bachelor at the Free University of Berlin, where 
+                    Passionate about coding since my Bachelor's in business administration at the Free University of Berlin, where 
                     I gained initial experiences with programming languages such as <strong>Python</strong>, <strong>R</strong>, 
                     <strong>PHP</strong>, and <strong>SQL</strong>.<br>
                     To make my coding passion my profession, I completed Career Foundry's Full-Stack Web Developer program, 
-                    learning <strong>JavaScript</strong>, <strong>React</strong>, <strong>NoSQL</strong> and more. 
-                    Now, I'm on the lookout for a role that values continuous growth.<br><br>
+                    learning <strong>JavaScript</strong>, <strong>React</strong>, <strong>NoSQL</strong> and more.<br><br>
+                    Now, I'm on the lookout for a role that values continuous learning and allows me to make 
+                    meaningful contributions.<br><br>
                     <a href="files/Matula_Isabel_Resume.pdf" target="_blank" download>Download my resume.</a>
                 </p>
                 <a href="#contact" class="button">Get in Touch</a>
