--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/style.production.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>Home</title>
 </head>
@@ -558,14 +558,15 @@
         <div class="contact">
             <div class="contact__information">
                 <h1>Contact Me</h1>
-                <h3>I'm based in Rostock and open to remote roles.<br>
-                    Feel free to connect with me via Email or on LinkedIn!
-                </h3>
+                <p>
+                    <b>I'm based in Rostock and open to remote roles.<br>
+                    Feel free to connect with me via Email or on LinkedIn!</b>
+                </p>
                 Isabel Matula<br>
                 Rostock - Germany<br>
                 <br>
                 Email: <a href="mailto:isabel.matula(at)outlook(dot)de">isabel.matula@outlook.de</a><br>
-                Linkedin: <a href="https://www.linkedin.com/in/isabel-matula" target="_blank">Isabel Matula</a>
+                Linkedin: <a href="https://www.linkedin.com/in/isabel-matula" target="_blank">Isabel Matula</a><br><br>
             </div>
             <div class="contact__animation">
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="230" height="230" viewBox="0 0 1080 1080" xml:space="preserve">
