Add class to project description

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/style.production.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>Home</title>
 </head>
@@ -236,7 +236,7 @@
                 <a href="https://mymovie-api.netlify.app/login" target="_blank" class="button">Demo</a>
                 <dialog class="modal">
                     <h2>React myMovie<a class="close-modal"><img src="img/cross-icon.svg" alt="close modal icon"></a></h2>
-                    <p>
+                    <p class="project-description">
                         React Client-side for an application called myMovie based on its
                         existing server-side code (REST API and database).
                         User can create an user profile and save their favorite movies.
@@ -282,7 +282,7 @@
              class="project-list__item">
                 <h2>Meet App<a class="open-modal"><img src="img/plus-icon.svg"></a></h2>
                 <a href="https://isabelwen.github.io/meet/" target="_blank"><img src="img/meet_app_project_full.png"></a>
-                <p>
+                <p class="project-description">
                     A serverless, progressive web application (PWA) using a test-driven development (TDD) technique. 
                     The Meet App uses the <strong>Google Calendar API </strong> to fetch upcoming events.
                     This project was build using <strong>React</strong>, <strong>Recharts</strong>, 
@@ -341,7 +341,7 @@
              class="project-list__item">
                 <h2>Angular myMovie<a class="open-modal"><img src="img/plus-icon.svg"></a></h2>
                 <a href="https://isabelwen.github.io/myMovie-Angular-app/welcome" target="_blank"><img src="img/angular_movie_app_project_full.png"></a>
-                <p>
+                <p class="project-description">
                     Angular Client-side for an application called myMovie based on its
                     existing server-side code (REST API and database).
                     User can create an user profile and save their favorite movies.
@@ -398,9 +398,9 @@
              class="project-list__item">
                 <h2>myMovie API<a class="open-modal"><img src="img/plus-icon.svg"></a></h2>
                 <a href="https://github.com/IsabelWen/movie_api" target="_blank"><img src="img/mymovie-db_full.png"></a>
-                <p>
+                <p class="project-description">
                     This API provide users with access to information about different movies, directors, and genres. 
-                    Users are able to sign up, update their personal information, and create a list of their favorite movies.
+                    Users are able to sign up, update their personal information and favorite movies list.
                     This project was build using <strong>MongoDB</strong>, <strong>Node.js</strong>, 
                     <strong>Express</strong>, and more. 
                 </p>
@@ -453,7 +453,7 @@
              class="project-list__item">
                 <h2>Chat App<a class="open-modal"><img src="img/plus-icon.svg"></a></h2>
                 <a href="https://github.com/IsabelWen/chat" target="_blank"><img src="img/chat-app_full.png"></a>
-                <p>
+                <p class="project-description">
                     A chat app for mobile devices using React Native. The app provides users with a chat interface and 
                     options to share images, audios and location.
                     This project was build using <strong>React Native</strong>, <strong>Firebase</strong>, 
@@ -508,7 +508,7 @@
              class="project-list__item">
                 <h2>Pokemon-Index<a class="open-modal"><img src="img/plus-icon.svg"></a></h2>
                 <a href="https://isabelwen.github.io/simple-js-app/" target="_blank"><img src="img/pokemon-index_full.png"></a>
-                <p>
+                <p class="project-description">
                     A small web application with HTML, CSS, and JavaScript that loads data about pokemons from an external API 
                     and enables the viewing of data points in detail.
                     This project was build using <strong>JavaScript</strong>, <strong>HTML</strong>, 
