--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <h2>Welcome! I'm ...</h2>
                 <h1>Isabel Matula<br>Full-Stack Developer</h1>
                 <p>
-                    Passionate about coding since my Bachelor's in business administration at the Free University of Berlin, where 
+                    I'm passionate about coding since my Bachelor's in business administration at the Free University of Berlin, where 
                     I gained initial experiences with programming languages such as <strong>Python</strong>, <strong>R</strong>, 
                     <strong>PHP</strong>, and <strong>SQL</strong>.<br>
                     To make my coding passion my profession, I completed Career Foundry's Full-Stack Web Developer program, 
@@ -157,7 +157,7 @@
                     data-aos-duration="800"
                     data-aos-easing="ease-in-out" 
                     >
-                        I discovered my passion for coding during my Bachelor at the Free University of Berlin. 
+                        I discovered my love for coding during my Bachelor at the Free University of Berlin. 
                         Throughout foundational modules and career preparation courses, I gained initial experiences with 
                         programming languages such as Python, R, PHP, and SQL. To transition my coding passion into a profession, 
                         I enrolled in Career Foundry's Full-Stack Web Developer program.<br>
@@ -204,7 +204,6 @@
                         opportunities either locally or in remote positions. Whether it's working directly from
                         Rostock or collaborating from a distance, I am fully committed to making a valuable contribution
                         to any team I join.
-                        Let's connect and explore how we can create something meaningful together!
                     </p>
                 </div>
             </div>
@@ -606,7 +605,6 @@
         <div class="social-media">
             <a href="https://github.com/IsabelWen" target="_blank"><img src="img/github_icon.svg" alt="Github"></a>
             <a href="https://www.linkedin.com/in/isabel-matula" target="_blank"><img src="img/linkedin_icon.svg" alt="LinkedIn"></a>
-            <a href="https://medium.com/@isabelwen" target="_blank"><img src="img/medium_icon.svg" alt="Medium"></a>
         </div>
         <a href="#top">Back to top</a>
         <a class="impressum" href="files/Impressum.pdf" target="_blank">Impressum</a>
