Add django to toolbelt

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                 <img src="img/tool-logos/MongoDB.svg" alt="MongoDB logo">
                 <img src="img/tool-logos/Node_js.svg" alt="Node.js logo">
                 <img src="img/tool-logos/Python.svg" alt="Python logo">
+                <img src="img/tool-logos/django.svg" alt="Django logo">
                 <img src="img/tool-logos/React.svg" alt="React logo">
                 <img src="img/tool-logos/Sql.svg" alt="SQL logo">
                 <img src="img/tool-logos/Visual_Studio.svg" alt="Visual Studio logo">
@@ -101,6 +102,7 @@
                 <img src="img/tool-logos/MongoDB.svg" alt="MongoDB logo">
                 <img src="img/tool-logos/Node_js.svg" alt="Node.js logo">
                 <img src="img/tool-logos/Python.svg" alt="Python logo">
+                <img src="img/tool-logos/django.svg" alt="Django logo">
                 <img src="img/tool-logos/React.svg" alt="React logo">
                 <img src="img/tool-logos/Sql.svg" alt="SQL logo">
                 <img src="img/tool-logos/Visual_Studio.svg" alt="Visual Studio logo">
