Add case study to myMovie API

--- a/index.html
+++ b/index.html
@@ -404,6 +404,7 @@
                     <strong>Express</strong>, and more. 
                 </p>
                 <a href="https://github.com/IsabelWen/movie_api" target="_blank" class="button">Code</a>
+                <a href="files/Case Study - Movie API.pdf" target="_blank" class="button">Case</a>
                 <dialog class="modal">
                     <h2>myMovie API<a class="close-modal"><img src="img/cross-icon.svg" alt="close modal icon"></a></h2>
                     <p>
