Add case study to Meet App

--- a/index.html
+++ b/index.html
@@ -285,10 +285,10 @@
                     A serverless, progressive web application (PWA) using a test-driven development (TDD) technique. 
                     The Meet App uses the <strong>Google Calendar API </strong> to fetch upcoming events.
                     This project was build using <strong>React</strong>, <strong>Recharts</strong>, 
-                    <strong>JavaScript</strong>, and more. 
+                    <strong>JavaScript</strong>, and more.
                 </p>
                 <a href="https://github.com/IsabelWen/meet" target="_blank" class="button">Code</a>
-                <a href="https://isabelwen.github.io/meet/" target="_blank" class="button">Demo</a>
+                <a href="files/Case Study - Meet App.pdf" target="_blank" class="button">Case</a>
                 <dialog class="modal">
                     <h2>Meet App<a class="close-modal"><img src="img/cross-icon.svg" alt="close modal icon"></a></h2>
                     <p>
