Add new portfolio piece

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     learning <strong>JavaScript</strong>, <strong>React</strong>, <strong>NoSQL</strong> and more.<br><br>
                     Now, I'm on the lookout for a role that values continuous learning and allows me to make 
                     meaningful contributions.<br><br>
-                    <a href="files/Matula_Isabel_CV.pdf" target="_blank" download>Download my resume.</a>
+                    <!-- <a href="files/Matula_Isabel_CV.pdf" target="_blank" download>Download my resume.</a> -->
                 </p>
                 <a href="#contact" class="button">Get in Touch</a>
                 <a href="#work" class="button">See my Work</a>
@@ -181,7 +181,7 @@
                     >
                 </div>
             </div>
-            <div class="about__item">
+            <!-- <div class="about__item">
                 <h2>What am I looking for</h2>
                 <div class="about__item-content">
                     <img 
@@ -208,7 +208,7 @@
                         to any team I join.
                     </p>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
     <!-- Work -->
@@ -506,22 +506,23 @@
              data-aos-duration="1000"
              data-aos-easing="ease-in-out" 
              class="project-list__item">
-                <h2>Recipe App<a class="open-modal"><img src="img/plus-icon.svg"></a></h2>
-                <a href="https://recipe-app-hedk.onrender.com/" target="_blank"><img src="img/recipe_app_full.png"></a>
+                <h2>LipidTracker App<a class="open-modal"><img src="img/plus-icon.svg"></a></h2>
+                <a href="https://lipidtracker.netlify.app" target="_blank"><img src="img/lipidtracker_app_full.png"></a>
                 <p class="project-description">
-                    A recipe app with a <b>PostgreSQL</b> database at the server side, and the client side renders HTML- and 
-                    CSS-based pages via the Django framework.
-                    This project was build using <strong>Python</strong>, <strong>Django</strong>, and more.
+                    An app for tracking LDL, HDL, and triglyceride values by inputting values and dates from blood tests. 
+                    The app visualizes data using <b>Reacharts</b>.
+                    This project was build using <strong>React</strong>, <strong>Firebase</strong>, <strong>SASS</strong> 
+                    and more.
                 </p>
-                <a href="https://github.com/IsabelWen/recipe-app" target="_blank" class="button">Code</a>
-                <a href="https://recipe-app-hedk.onrender.com/" target="_blank" class="button">Demo</a>
+                <a href="https://github.com/IsabelWen/LipidTracker" target="_blank" class="button">Code</a>
+                <a href="https://lipidtracker.netlify.app" target="_blank" class="button">Demo</a>
                 <dialog class="modal">
-                    <h2>Recipe App<a class="close-modal"><img src="img/cross-icon.svg" alt="close modal icon"></a></h2>
+                    <h2>LipidTracker App<a class="close-modal"><img src="img/cross-icon.svg" alt="close modal icon"></a></h2>
                     <p>
-                        A recipe app with a PostgreSQL database at the server side, and the client side renders HTML- and 
-                        CSS-based pages via the Django framework. This application lets the users sign up and create their 
-                        own content. The user can create and edit recipes, including their ingredients, cooking time, and 
-                        difficulty level.
+                        This is an app for tracking LDL, HDL, and triglyceride values 
+                        by inputting values and dates from blood tests. The app visualizes data to show trends over time, 
+                        enabling users to monitor improvements or changes. Users can also note dietary or medication 
+                        adjustments to better understand their influence on cholesterol levels.
                     </p>
                     <h3>Features</h3>
                     <ul>
@@ -529,27 +530,26 @@
                             Allow for user authentication, login, and logout.
                         </li>
                         <li>
-                            Let users search for recipes according to ingredients.
+                            Let users input their LDL, HDL, and triglyceride values and dates.
                         </li>
                         <li>
-                            Display more details on each recipe if the user asks for that.
+                            Visualize data to show trends over time.
                         </li>
                         <li>
-                            Automatically rate each recipe by difficulty level.
+                            Display user blood results in a table, where they can be updated or deleted.
                         </li>
                         <li>
-                            Add user recipes to an database.
-                        </li>
-                        <li>
-                            Show statistics and visualizations based on trends and data analysis
+                            Allow the user to set target values.
                         </li>
                     </ul>
                     <div class="tags">
-                        <span class="tag">Python</span>
+                        <span class="tag">React</span>
                         <span class="tag">HTML</span>
                         <span class="tag">CSS</span>
-                        <span class="tag">Django</span>
-                        <span class="tag">SQL</span>
+                        <span class="tag">Firebase</span>
+                        <span class="tag">Recharts</span>
+                        <span class="tag">SASS</span>
+                        <span class="tag">Material UI</span>
                     </div>
                 </dialog>
              </div>
