--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     <strong>PHP</strong>, and <strong>SQL</strong>.<br>
                     To make my coding passion my profession, I completed Career Foundry's Full-Stack Web Developer program, 
                     learning <strong>JavaScript</strong>, <strong>React</strong>, <strong>NoSQL</strong> and more.<br><br>
-                    Now, I'm on the lookout for a role that values continuous learning and allows me to make 
-                    meaningful contributions.<br><br>
-                    <!-- <a href="files/Matula_Isabel_CV.pdf" target="_blank" download>Download my resume.</a> -->
+                    <!-- Now, I'm on the lookout for a role that values continuous learning and allows me to make 
+                    meaningful contributions.<br><br> -->
+                    <a href="files/Matula_Isabel_CV.pdf" target="_blank" download>Download my resume.</a>
                 </p>
                 <a href="#contact" class="button">Get in Touch</a>
                 <a href="#work" class="button">See my Work</a>
